# MySekaiStoryteller

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  LICENSE  NOTICE.txt  README-ZH.md  README.md  VIDEO-LICENSE-CN.md  VIDEO-LICENSE.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sekai-story.schema.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  dependabot-fix-pnpm-lock.yml  release.yml
public/live2d-core/: README.md
resources/: icon.icns
scripts/: reset-settings.mjs  setup-live2d-cores.mjs  test-story-reducer.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  editor.json  mobile.json  player.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  protocol.rs
src-tauri/src/commands/: diagnostics.rs  file_open.rs  mobile_encoder.rs  mobile_hw_encoder.rs  mod.rs  project.rs  render.rs  settings.rs  window.rs
src-tauri/src/commands/project/: archive.rs  assets.rs  metadata.rs  mod.rs  model_registry.rs  paths.rs  story.rs
src/assets/: base.css  main.css
src/components/: FrontendErrorBoundary.tsx
src/context/: SettingsContext.ts
src/dev/: README.md  previews.tsx  useInitial.ts
src/export/: exportUi.ts  pendingRenderConfig.ts
src/hooks/: useLongPressContextMenu.ts  useSettings.ts  useSettingsState.ts  useSystemTheme.ts  useViewportMode.ts
src/i18n/: index.ts  language.ts
src/lib/: diagnostics.ts  fuzzyMatch.ts  live2d.ts  logger.ts  orientation.ts  platform.ts  projectAssetUrl.ts  touchMode.ts
src/main/: CliArgs.ts  index.ts
src/modelRegistry/: api.ts  schema.ts
src/onboarding/: EditorProductTour.tsx  MainProductTour.tsx  ProductTour.tsx  types.ts
src/preload/: index.d.ts  index.ts
src/project/: api.ts  archive.ts  assets.ts  metadata.ts
src/providers/: SettingsProvider.tsx
src/renderer/: RedistributableFiles.txt  editor.html  index.html  welcome.html
src/settings/: SettingsContext.ts  SettingsProvider.tsx  api.ts  fonts.ts  (+5 more)
tests/: 测试终版（参数参考）.sekai-story.json
(+223 files in other folders)
