[package]
name = "my-sekai-storyteller"
version = "1.0.0-beta.11"
description = "A Live2D reading tool in Project SEKAI style"
authors = ["GuangChen2333"]
edition = "2021"

[lib]
name = "my_sekai_storyteller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
log = "0.4"
mime_guess = "2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
crossbeam-channel = "0.5"
tiny_http = "0.12"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

# Android/iOS software encode (no host ffmpeg).
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
openh264 = { version = "0.9", default-features = false, features = ["source"] }
mp4 = "0.14"
bytes = "1"
# Decode compact JPEG frame bridges from the webview (avoids multi-MB RGBA IPC).
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Android MediaCodec JNI bridge.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

